# Garuda

./: .bak  .env  .gitignore  BUGFIX.md  BUG_FIX_SUMMARY.md  CHANGES_SUMMARY.md  CHANGE_SUMMARY.md  CHAT_FINAL_STEP_CHANGES.md  CHAT_UI_FIX_SUMMARY.md  CODE_REVIEW_SUMMARY.md  COMMIT_MESSAGE.txt  COMPLETE_USAGE_EXAMPLE.py  Dockerfile  EMBEDDING_LOGGING_GUIDE.md  EMBEDDING_RAG_INTEGRATION.md  ENTITIES_GRAPH_CHANGES.md  ENTITY_MERGE_FIX_README.md  ENTITY_MERGE_FIX_SUMMARY.md  ENTITY_MERGE_FIX_VISUAL.md  EXOSCALE_AUTH_FIX_SUMMARY.md  EXOSCALE_GPU_FIX_SUMMARY.md  EXOSCALE_IMPLEMENTATION_SUMMARY.md  EXOSCALE_QUICKSTART.md  EXOSCALE_VERIFICATION_REPORT.md  FEATURES.md  FEATURES_QUICKSTART.md  FINAL_FIX_SUMMARY.txt  FINAL_SUMMARY.md  FIX_SUMMARY.md  GARUDA_ENHANCEMENT_README.md  GIT_COMMIT_MESSAGE.txt  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_CHAT_ENTITY_FIXES.md  IMPLEMENTATION_SUMMARY_V2.md  INTEGRATION_SUMMARY.md  MEDIA_PROCESSING.md  MULTIPLE_RESULTS_FIX_SUMMARY.md  PHASE2_SUMMARY.md  PHASE2_VERIFICATION.md  (+41 more)
.github/agents/: my-agent.agent.md
.github/workflows/: ci.yml
data/examples/: runpod_gpus.py
docs/: CHANGELOG_entity_gap_analyzer_fix.md  CHAT_UI_VISUAL_EXAMPLES.md  DEEP_RAG_GRAPH_EXPLORATION.md  DEEP_RAG_IMPLEMENTATION_SUMMARY.md  DEEP_RAG_TEST_SCENARIOS.md  DEEP_RAG_UI_VISUAL_GUIDE.md  EXOSCALE_INTEGRATION.md  FIX_IMPLEMENTATION_SUMMARY.md  FIX_SUMMARY.md  MULTISTEP_TASK_VALIDATION.md  PDF_PROCESSING_ENHANCEMENTS.md  RAG_RETRY_PARAPHRASING.md  VERIFICATION_REPORT.md  VISUAL_CHANGES.md  WORKER_TIMEOUT_FIX.md  nested_rag_fix.md
ollama-exoscale/: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  exoscale_adapter.py  install-local.sh  requirements.txt
plugin/chrome/: background.js  content.js  manifest.json  popup.html  popup.js
src/: search.py
src/browser/: selenium.py
src/database/: engine.py  models.py  refresh.py  store.py
src/discover/: frontier.py  refresh.py  seeds.py
src/explorer/: engine.py  scorer.py
src/extractor/: engine.py  llm.py
src/garuda_intel/: config.py  (+2 more)
tests/: __init__.py  test_adaptive_crawler.py  test_adaptive_media_processor.py  test_agent_service.py  test_caching.py  test_chat_final_step_tracking.py  test_chat_pipeline_cycles.py  test_comprehensive_extraction.py  test_crawl_improvements.py  test_database_manager.py  test_duplicate_entity_lookup.py  test_dynamic_field_models.py  test_enhanced_processing.py  test_entity_extraction_and_graph.py  test_entity_extraction_post_processing.py  test_entity_gap_analyzer.py  test_entity_kind_registry_integration.py  test_entity_merging.py  test_entity_registry.py  test_entity_uuid_and_graph_actions.py  test_exoscale_adapter.py  test_gibberish_detection.py  test_graceful_shutdown.py  test_graph_builder_relationships.py  test_graph_search_seeds.py  test_inference_engine.py  test_intelligence_aggregation_fix.py  test_list_type_coercion_fixes.py  test_local_data.py  test_media_linker.py  test_media_processing.py  test_metadata_json_fix.py  test_multi_node_relationships.py  test_multistep_validation.py  test_nested_rag_fix.py  test_ollama_exoscale.py  test_parallel_processing.py  test_paraphrasing.py  test_post_crawl_scenario.py  test_quality_validator.py  (+13 more)
(+186 files in other folders)
